# YOLO-DarkNet-CPP-Inference

./: CMakeLists.txt  README.md  build.sh
features/: drawing_intrusion.py
include/: inference.h  json.hpp  read_json.h
src/: centroid_tracker.cpp  inference.cpp  main.cpp
